--- a/tp-integrador/tpIntegrador.html
+++ b/tp-integrador/tpIntegrador.html
@@ -1,11 +1,9 @@
 
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Marcos Daniel Saguier">
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Buenos Aires - Conf</title>
@@ -17,8 +15,6 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#listaHamburguesa">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <!--Fin Boton hamburguesa -->
-                <!--Inicio Logo -->
                 <a class="navbar-brand" href="#">
                     <img src="img/codoacodo.png" alt="logo codo a codo" class="img-fluid" width="15%" height="15%">
                     Conf Bs As
@@ -39,14 +35,13 @@
                         <a class="nav-link" href="#">Conviértete en Orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="#">Comprar Tickets</a>
+                        <a class="nav-link text-success" href="./layouts/tickets.html">Comprar Tickets</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <!-- Inicio texto -->
         <div class="container-fluid delante-opaco">
             <div class="container w-50 h-100 float-end d-flex">
                 <div class="my-auto">
@@ -61,7 +56,7 @@
                         conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de
                         primer
                         nivel que tenemos para ti. Te esperamos!</p>
-                    <button type="button" class="btn btn-success float-end m-1">Comprar tickets</button>
+                    <a type="button" class="btn btn-success float-end m-1" href="./layouts/tickets.html">Comprar tickets</a>
                     <button type="button" class="btn btn-outline-light float-end m-1">Quiero ser orador</button>
                 </div>
             </div>
@@ -83,8 +78,6 @@
             <span class="fs-2 fw-bold">Oradores</span>
         </p>
     </div>
-    <!-- Fin Titulo -->
-    <!-- Inicio Cards -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-md-4">
